# Vibe-HW-AC

./: .gitignore  README.md
01_mcp/: .env.example  config.py  db.py  pyproject.toml  server.py
01_mcp/tools/: __init__.py  calculator.py  chroma_retrieval.py  evaluation_tools.py  file_operations.py  pdf_tools.py  python_repl.py  query_optimizer.py  web_search.py  wolfram.py
02_litellm/: .env.example  litellm_config.yaml
03_router/: README.md  apps.json  main.py  (+3 more)
hr_hiring/1_agents/: config.py  db.py  pyproject.toml  run.py
hr_hiring/1_agents/agents/: evaluator.py
hr_hiring/2_backend/: README.md  delete_failed.py  pyproject.toml  test_llm.py
hr_hiring/2_backend/app/: auth.py  config.py  deps.py  main.py  models.py  schemas.py
hr_hiring/2_backend/app/routers/: __init__.py  auth_ldap.py  candidates.py  evaluations.py  llm_stats.py  positions.py
hr_hiring/2_backend/app/services/: document_ingest.py
hr_hiring/2_backend/app/workflows/: __init__.py  extractor.py  hashing.py  prompts.py  runner.py  schemas.py  state.py  tool_gateway.py
hr_hiring/2_backend/scripts/: reset_cost_test.py  seed_demo.py
ollama_hrx/: .env.example  README.md  litellm_config.yaml  llm_wrapper.py  main.py  notes.txt  pyproject.toml  start_app.ps1
ollama_hrx/kb/: ppd.md
ollama_hrx/web/: app.js  index.html  styles.css
production_cards_2/2_backend/: .env.example  pyproject.toml
production_cards_2/2_backend/app/: auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
production_cards_2/2_backend/app/routers/: auth_ldap.py  cards.py  me.py
production_cards_2/2_backend/app/services/: agent_pipeline.py  pdf_renderer.py
react_assistant/2_ai_framework/: .env.example  README.md  pyproject.toml
react_assistant/2_ai_framework/.sharepoint_chroma_test/: sharepoint_manifest.json  sharepoint_sync_state.json
react_assistant/2_ai_framework/src/agents/: __init__.py  base.py  plan_execute_agent.py  react_agent.py  workflow_agent.py  workflow_models.py
react_assistant/2_ai_framework/src/clients/: __init__.py  llm_client.py  mcp_client.py
react_assistant/2_ai_framework/src/examples/plan_execute/: ai_programming_languages_comparison.py  climate_change_scientific_analysis.py  mortgage_financial_analysis.py  multi_file_data_processing.py  renewable_energy_market_research.py  sharepoint_ingest.py
react_assistant/2_ai_framework/src/examples/react/: ai_trends_research.py  astronomical_distances_wolfram.py  chroma_query_validation.py  circle_area_calculation.py  compound_interest_report.py  python_data_visualization.py  quantum_computing_research.py  stock_market_analysis.py
react_assistant/2_ai_framework/src/examples/workflow/: conditional_branching_workflow.py  data_flow_demo.py  data_science_workflow.py  dynamic_workflow_generation.py  ecommerce_recommendation_system.py  simple_linear_workflow.py  software_development_workflow.py
react_assistant/2_ai_framework/src/pipelines/: README.md  sharepoint_ingest.py  sharepoint_retrieval.py  sharepoint_source_policies.example.json  sharepoint_source_policies.json  sharepoint_source_policies.test.json  sharepoint_sources.example.json  sharepoint_sources.json  sharepoint_sources.test.json
react_assistant/3_web/: README.md  app.py  pyproject.toml
react_assistant/3_web/static/: index.html  main.js
(+145 files in other folders)
