[project]
name = "ollama_hrx"
version = "0.1.0"
description = "A ReAct (Reason and Act) AI agent that handles multiple tool calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [    
    "ollama>=0.4.5",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.32.0",
]
