[project]
name = "hr-hiring-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.0",
  "pyodbc>=5.0.0",
  "litellm>=1.45.0",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "pymupdf>=1.24.0",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
