[project]
name = "production-cards-2-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pyodbc>=5.0.0",
  "pymupdf>=1.24.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "claude-agent-sdk>=0.1.53",
  "anyio>=4.0.0",
  "ldap3>=2.9.0",
  "itsdangerous>=2.1.0",
  "python-jose[cryptography]>=3.3.0",
]

[tool.uv]
dev-dependencies = []
