[project]
name = "custom-agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "mcp>=1.3.0",
    "litellm>=1.74.0",
    "instructor>=1.7.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.5",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
]
