[project]
name = "agent-web-ui"
version = "0.1.0"
description = "Modern web UI for ReAct Chroma agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.8.0",
  "msal>=1.31.0",
  "itsdangerous>=2.2.0",
  "ldap3>=2.9.1",
  "custom-agent-framework",
]

[tool.uv.sources]
custom-agent-framework = { path = "../2_ai_framework", editable = true }
